--- a/DescentCampaignSaver/MainWindow.xaml
+++ b/DescentCampaignSaver/MainWindow.xaml
@@ -2,123 +2,176 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:self="clr-namespace:DescentCampaignSaver.Descent"
         xmlns:dcSaver="clr-namespace:DescentCampaignSaver"
         xmlns:my="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
-        Title="Untitled.d2e - Descent 2nd Edition Campaign Saver" Height="442" Width="903" Loaded="WindowLoaded">
-  <Window.Resources>
-    <Style x:Key="myListboxStyle">
-      <Style.Resources>
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="LightBlue" />
-      </Style.Resources>
-    </Style>
-  </Window.Resources>
-  <Window.CommandBindings>
-    <CommandBinding Command="{x:Static dcSaver:CustomCommands.SaveCommand}" Executed="CommandSaveExecuted" />
-    <CommandBinding Command="{x:Static dcSaver:CustomCommands.SaveAsCommand}" Executed="CommandSaveAsExecuted" />
-    <CommandBinding Command="{x:Static dcSaver:CustomCommands.OpenCommand}" Executed="CommandOpenExecuted" />
-  </Window.CommandBindings>
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="20" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="22" />
-    </Grid.RowDefinitions>
-    <Menu Grid.Row="0">
-      <MenuItem Header="_File">
-        <MenuItem Header="_Open" Command="{x:Static dcSaver:CustomCommands.OpenCommand}"
+        Title="Untitled.d2e - Descent 2nd Edition Campaign Saver" Height="768" Width="1024" Loaded="WindowLoaded"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d">
+    <Window.Resources>
+        <Style x:Key="myListboxStyle">
+            <Style.Resources>
+                <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="LightBlue" />
+            </Style.Resources>
+        </Style>
+    </Window.Resources>
+    <Window.CommandBindings>
+        <CommandBinding Command="{x:Static dcSaver:CustomCommands.SaveCommand}" Executed="CommandSaveExecuted" />
+        <CommandBinding Command="{x:Static dcSaver:CustomCommands.SaveAsCommand}" Executed="CommandSaveAsExecuted" />
+        <CommandBinding Command="{x:Static dcSaver:CustomCommands.OpenCommand}" Executed="CommandOpenExecuted" />
+    </Window.CommandBindings>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="300" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="22" />
+        </Grid.RowDefinitions>
+        <Menu Grid.Row="0">
+            <MenuItem Header="_File">
+                <MenuItem Header="_Open" Command="{x:Static dcSaver:CustomCommands.OpenCommand}"
                   InputGestureText="Ctrl+O" />
-        <MenuItem Header="_Save" Command="{x:Static dcSaver:CustomCommands.SaveCommand}"
+                <MenuItem Header="_Save" Command="{x:Static dcSaver:CustomCommands.SaveCommand}"
                   InputGestureText="Ctrl+S" />
-        <MenuItem Header="Save _As" Command="{x:Static dcSaver:CustomCommands.SaveAsCommand}"
+                <MenuItem Header="Save _As" Command="{x:Static dcSaver:CustomCommands.SaveAsCommand}"
                   InputGestureText="Ctrl+Shift+S" />
-        <MenuItem Header="E_xit" Click="MenuItemClick" />
-      </MenuItem>
-    </Menu>
-    <TabControl Grid.Row="1" Name="tc_Players">
-      <TabControl.ItemTemplate>
-        <DataTemplate>
-          <StackPanel Orientation="Horizontal">
-            <TextBox Text="{Binding Path=Name}" Cursor="Arrow" BorderThickness="0" Background="Transparent"
+                <MenuItem Header="E_xit" Click="MenuItemClick" />
+            </MenuItem>
+        </Menu>
+        <StackPanel Orientation="Vertical" Name="ic_Campaign" Grid.Row="1">
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Unspent Player Gold" Width="150px" FontWeight="Bold"/>
+                <TextBox Text="{Binding Path=UnspentPlayerGold}" Height="20px" Width="100px"
+                       GotMouseCapture="TextBoxGotMouseCapture" GotKeyboardFocus="TextBoxClearOnFocus" />
+                <Label Content="Overlord Unspent Exp: " Width="150px" FontWeight="Bold" Margin="30 0 0 5" />
+                <TextBox Text="{Binding Path=UnspentExp}" Height="20px" Width="100px" DataContext="{Binding Path=Overlord}"
+                       GotMouseCapture="TextBoxGotMouseCapture" GotKeyboardFocus="TextBoxClearOnFocus" />
+            </StackPanel>
+            <StackPanel Orientation="Vertical">
+                <Label Content="Notes" Width="100px" HorizontalAlignment="Left" FontWeight="Bold"/>
+                <TextBox Text="{Binding Path=Notes}" AcceptsReturn="True" Height="40px"
+                       GotMouseCapture="TextBoxGotMouseCapture" GotKeyboardFocus="TextBoxClearOnFocus" />
+            </StackPanel>
+            <my:AutoCompleteBox Margin="0 20 0 0" Foreground="Gray"
+                                Text="Enter OverlordCharacter Abilities and Runes Here..."
+                                ItemsSource="{Binding Source={x:Static dcSaver:MyResources.overlordSearchableItems}}" IsTextCompletionEnabled="True"
+                                FilterMode="Contains" IsDropDownOpen="True" ValueMemberPath="Name" Style="{StaticResource myListboxStyle}"
+                                PreviewKeyDown="AutoCompleteBoxPreviewKeyDown"  PreviewMouseDown="AutoCompleteBoxPreviewMouseDown"
+                                PreviewGotKeyboardFocus="AutoCompleteBoxGotFocus" LostFocus="AutoCompleteBox_LostFocus">
+                <my:AutoCompleteBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Name: " FontWeight="Bold" Margin="5 0 5 0"
+                           VerticalAlignment="Center" />
+                            <TextBlock Text="{Binding Path=Name}" Width="150px" Margin="5 0 5 0"
+                               VerticalAlignment="Center" />
+                            <Label Content="Type: " FontWeight="Bold" Margin="5 0 5 0"
+                           VerticalAlignment="Center" />
+                            <TextBlock Text="{Binding Path=GameType}" Width="150px" Margin="5 0 5 0"
+                               VerticalAlignment="Center" />
+                            <Label Content="Description: " FontWeight="Bold" Margin="5 0 5 0"
+                           VerticalAlignment="Center" />
+                            <TextBlock Text="{Binding Path=Description}" Margin="5 0 5 0"
+                               VerticalAlignment="Center" />
+                        </StackPanel>
+                    </DataTemplate>
+                </my:AutoCompleteBox.ItemTemplate>
+            </my:AutoCompleteBox>
+            <ScrollViewer VerticalScrollBarVisibility="Visible" Height="Auto">
+                <StackPanel Orientation="Vertical">
+                    <Label Content="OverlordCharacter Relics" FontWeight="Bold" Margin="0 2 0 0" />
+                    <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=OverlordRelics}"
+                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" DataContext="{Binding Path=Overlord}"/>
+                    <Label Content="OverlordCharacter Bought Cards" FontWeight="Bold" Margin="0 2 0 0" />
+                    <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=OverlordClassAbilities}"
+                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" DataContext="{Binding Path=Overlord}" />
+                </StackPanel>
+            </ScrollViewer>
+        </StackPanel>
+        <TabControl Grid.Row="2" Name="tc_Players">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox Text="{Binding Path=Name}" Cursor="Arrow" BorderThickness="0" Background="Transparent"
                      IsReadOnly="True" IsReadOnlyCaretVisible="False" KeyDown="TextBoxKeyDown" LostFocus="TextBoxLostFocus"
                      PreviewMouseDoubleClick="TextBoxMouseDoubleClick" PreviewMouseDown="TextBoxMouseDown" />
-            <Button Content="X" Click="ButtonClick" Height="20px" />
-          </StackPanel>
-        </DataTemplate>
-      </TabControl.ItemTemplate>
-      <TabControl.ContentTemplate>
-        <DataTemplate>
-          <StackPanel Orientation="Vertical">
-            <StackPanel Orientation="Horizontal">
-              <Label Content="CurrentHealth: " Width="100px" />
-              <TextBox Text="{Binding Path=CurrentHealth}" Height="20px" Width="100px"
+                        <Button Content="X" Click="ButtonClick" Height="20px" />
+                    </StackPanel>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+            <TabControl.ContentTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="CurrentHealth: " Width="100px" />
+                            <TextBox Text="{Binding Path=CurrentHealth}" Height="20px" Width="100px"
                        GotMouseCapture="TextBoxGotMouseCapture" GotKeyboardFocus="TextBoxClearOnFocus" />
-              <Label Content="CurrentFatigue: " Width="100px" Margin="30 0 0 5" />
-              <TextBox Text="{Binding Path=CurrentFatigue}" Height="20px" Width="100px"
+                            <Label Content="CurrentFatigue: " Width="100px" Margin="30 0 0 5" />
+                            <TextBox Text="{Binding Path=CurrentFatigue}" Height="20px" Width="100px"
                        GotMouseCapture="TextBoxGotMouseCapture" GotKeyboardFocus="TextBoxClearOnFocus" />
-              <Label Content="Unspent Exp: " Width="100px" Margin="30 0 0 5" />
-              <TextBox Text="{Binding Path=UnspentExp}" Height="20px" Width="100px"
+                            <Label Content="Unspent Exp: " Width="100px" Margin="30 0 0 5" />
+                            <TextBox Text="{Binding Path=UnspentExp}" Height="20px" Width="100px"
                        GotMouseCapture="TextBoxGotMouseCapture" GotKeyboardFocus="TextBoxClearOnFocus" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-              <Label Content="Character: " Width="100px" />
-              <ComboBox Width="150px"
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Character: " Width="100px" />
+                            <ComboBox Width="150px"
                         ItemsSource="{Binding Source={x:Static dcSaver:MyResources.descentCharacters}}" SelectedItem="{Binding Path=Character}"
                         DisplayMemberPath="Name" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-              <Label Content="Class: " Width="100px" />
-              <ComboBox Width="150px"
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Class: " Width="100px" />
+                            <ComboBox Width="150px"
                         ItemsSource="{Binding Source={x:Static dcSaver:MyResources.Classes}}" SelectedValue="{Binding Path=Class}" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
-              <CheckBox Content="Diseased? " IsChecked="{Binding Path=IsDiseased}" />
-              <CheckBox Content="Poisoned? " IsChecked="{Binding Path=IsPoisoned}" />
-              <CheckBox Content="Stunned? " IsChecked="{Binding Path=IsStunned}" />
-              <CheckBox Content="Immobilized? " IsChecked="{Binding Path=IsImmobilized}" />
-            </StackPanel>
-            <my:AutoCompleteBox Margin="0 20 0 0" Tag="{Binding Path=Name}" Foreground="Gray"
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                            <CheckBox Content="Diseased? " IsChecked="{Binding Path=IsDiseased}" />
+                            <CheckBox Content="Poisoned? " IsChecked="{Binding Path=IsPoisoned}" />
+                            <CheckBox Content="Stunned? " IsChecked="{Binding Path=IsStunned}" />
+                            <CheckBox Content="Immobilized? " IsChecked="{Binding Path=IsImmobilized}" />
+                        </StackPanel>
+                        <my:AutoCompleteBox Margin="0 20 0 0" Tag="{Binding Path=Name}" Foreground="Gray"
                                 Text="Enter Items, Search Cards, Class Abilites and Relics Here..."
                                 ItemsSource="{Binding Source={x:Static dcSaver:MyResources.allSearchableItems}}" IsTextCompletionEnabled="True"
                                 FilterMode="Contains" IsDropDownOpen="True" ValueMemberPath="Name" Style="{StaticResource myListboxStyle}"
                                 PreviewKeyDown="AutoCompleteBoxKeyDown" PreviewMouseDown="AutoCompleteBoxPreviewMouseDown"
                                 PreviewGotKeyboardFocus="AutoCompleteBoxGotFocus" LostFocus="AutoCompleteBoxLostFocus">
-              <my:AutoCompleteBox.ItemTemplate>
-                <DataTemplate>
-                  <StackPanel Orientation="Horizontal">
-                    <Label Content="Name: " FontWeight="Bold" Margin="5 0 5 0"
+                            <my:AutoCompleteBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label Content="Name: " FontWeight="Bold" Margin="5 0 5 0"
                            VerticalAlignment="Center" />
-                    <TextBlock Text="{Binding Path=Name}" Width="150px" Margin="5 0 5 0"
+                                        <TextBlock Text="{Binding Path=Name}" Width="150px" Margin="5 0 5 0"
                                VerticalAlignment="Center" />
-                    <Label Content="Type: " FontWeight="Bold" Margin="5 0 5 0"
+                                        <Label Content="Type: " FontWeight="Bold" Margin="5 0 5 0"
                            VerticalAlignment="Center" />
-                    <TextBlock Text="{Binding Path=GameType}" Width="150px" Margin="5 0 5 0"
+                                        <TextBlock Text="{Binding Path=GameType}" Width="150px" Margin="5 0 5 0"
                                VerticalAlignment="Center" />
-                    <Label Content="Description: " FontWeight="Bold" Margin="5 0 5 0"
+                                        <Label Content="Description: " FontWeight="Bold" Margin="5 0 5 0"
                            VerticalAlignment="Center" />
-                    <TextBlock Text="{Binding Path=Description}" Margin="5 0 5 0"
+                                        <TextBlock Text="{Binding Path=Description}" Margin="5 0 5 0"
                                VerticalAlignment="Center" />
-                  </StackPanel>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </my:AutoCompleteBox.ItemTemplate>
+                        </my:AutoCompleteBox>
+                        <Label Content="Class Abilities" FontWeight="Bold" Margin="0 2 0 0" />
+                        <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=ClassAbilites}"
+                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" />
+                        <Label Content="Shop Items" FontWeight="Bold" Margin="0 2 0 0" />
+                        <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=ShopItems}"
+                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" />
+                        <Label Content="Search Card Items" FontWeight="Bold" Margin="0 2 0 0" />
+                        <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=SearchCardItems}"
+                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" />
+                        <Label Content="Player Relics" FontWeight="Bold" Margin="0 2 0 0" />
+                        <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=PlayerRelics}"
+                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" />
+                    </StackPanel>
                 </DataTemplate>
-              </my:AutoCompleteBox.ItemTemplate>
-            </my:AutoCompleteBox>
-            <Label Content="Class Abilities" FontWeight="Bold" Margin="0 5 0 0" />
-            <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=ClassAbilites}"
-                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" />
-            <Label Content="Shop Items" FontWeight="Bold" Margin="0 5 0 0" />
-            <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=ShopItems}"
-                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" />
-            <Label Content="Search Card Items" FontWeight="Bold" Margin="0 5 0 0" />
-            <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=SearchCardItems}"
-                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" />
-            <Label Content="Player Relics" FontWeight="Bold" Margin="0 5 0 0" />
-            <DataGrid CanUserAddRows="False" Height="Auto" ItemsSource="{Binding Path=PlayerRelics}"
-                      AutoGeneratingColumn="DataGridAutoGeneratingColumn" />
-          </StackPanel>
-        </DataTemplate>
-      </TabControl.ContentTemplate>
-    </TabControl>
-    <StatusBar Grid.Row="2">
-      <StackPanel Orientation="Horizontal">
-        <TextBlock VerticalAlignment="Top" Name="tb_StatusBar" Text="" />
-      </StackPanel>
-    </StatusBar>
-  </Grid>
+            </TabControl.ContentTemplate>
+        </TabControl>
+        <StatusBar Grid.Row="3">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock VerticalAlignment="Top" Name="tb_StatusBar" Text="" />
+            </StackPanel>
+        </StatusBar>
+    </Grid>
 </Window>
